# 3DVisualizer

./: CMakeLists.txt
assets/: fragment_shader.glsl  vertex_shader.glsl
include/: Renderer.h  Shader.h  Window.h
src/: Renderer.cpp  Shader.cpp  Window.cpp  main.cpp
